--- a/src/app/data/projects.json
+++ b/src/app/data/projects.json
@@ -9,7 +9,7 @@
   },
   {
     "id": "Project 2",
-    "name": "PET SHOP WEB APP (MERN)",
+    "name": "Chat Application Development(Android)",
     "description": "A Web application for a pet store in karkala was developed using MERN stack",
     "tech": "Technologies Used : Html5 , css3, Javascript, MongoDB, Nodejs, ReactJs, Express,Cloudinary Image",
     "tools": "Tools used : MongoDB atlas, Postman, VS code",
